src/components/CodeBlock/CodeBlock.module.css
.root {
  --theme-clipboard-bg-color: rgb(255 255 255 / 15%);
  --line-color: #818e95;
  --line-bg-color: rgb(255 255 255 / 15%);
  --line-number-size: 40px;
  --line-padding: 20px;
  --border-radius: var(--border-radius-2xl);

  margin-block-end: var(--space-s);
  line-height: var(--line-height-xs);
  overflow: hidden;
}

.codeWrapper {
  overflow: auto;
  height: calc(100% - 42px);
  border-radius: 0 0 12px 12px;
  background-color: var(--color-background-pre);
}

.darker .codeWrapper {
  background-color: var(--base-color-grey-1000);
}

.code {
  position: relative;
}

.code :global(pre) {
  margin: 0;

  /* Needed to overwrite Shikit theme */
  background-color: var(--color-background-pre) !important;
  padding-block: 15px;
}

.darker .code :global(pre) {
  /* Needed to overwrite Shikit theme */
  background-color: var(--base-color-grey-1000) !important;
}

.error .code :global(pre) {
  /* Needed to overwrite Shikit theme */
  color: var(--brand-color-red-5) !important;
}

.code :global(code) {
  display: grid;
  tab-size: 4;
  hyphens: none;
  white-space: pre;
}

.code :global(.line) {
  padding-inline: var(--line-padding);
}

.withLineNumbers {
  counter-reset: line;
  counter-increment: line 0;
}

.withLineNumbers :global(.line::before) {
  content: counter(line) / '';
  width: 16px;
  counter-increment: line;
  margin-inline-end: var(--line-padding);
  display: inline-block;
  text-align: right;
  color: var(--line-color);
  flex-shrink: 0;
}

.lang {
  display: flex;
  gap: 30px;
  align-items: center;
  justify-content: space-between;
  position: relative;
  user-select: none;
  color: var(--color-text-on-color);
  border-radius: var(--border-radius) var(--border-radius) 0 0;
  padding-block: 5px;
  padding-inline: 21px;
  background: var(--color-background-pre) linear-gradient(var(--line-bg-color), var(--line-bg-color) 100%)
    center bottom / 100% 1px no-repeat;
}

.darker .lang {
  background: var(--base-color-grey-1000) linear-gradient(var(--line-bg-color), var(--line-bg-color) 100%)
    center bottom / 100% 1px no-repeat;
}

.langText {
  opacity: 0.75;
}

.hideHeader {
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
}

.pre {
  padding: 0 var(--space-m);
  color: rgb(255 255 255);
}

